--- a/TODO
+++ b/TODO
@@ -2,10 +2,12 @@
 TODO:
   ✔ * Refactor module names, maybe also class names? @done(22-09-04 22:09)
   - Make Main Menu appear in Armature context menu when you right click in armature mode
+  - Identify IK and FK bone workflow and better naming convention, show it in operators and UI
   - Assign layer assignment logic to every set_bonetype method in mvbh_scripts class
   - Figure out how to assign custom property to the armature and change it's type and name
   - Define all operators in operators module
   - Finalize UI Menu
   - Learn how to set up a custom keymap, make sure you have custom keymap setup
+  - Learn how to assign cutom parameters from the settings part of the addon.
   ✔ * Write logic to show info and error messages in info view and viewport @done(22-09-04 21:44) #partially though no info view yet, but will be
   ✔ Make sure appropriate methods utilise info messages and inform user @done(22-09-07 23:25)
